--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@
 
 body {
     font-size: 100%;
-    background-image: linear-gradient(to right, #FFFFFF, #fffbf0);
+}
+html{
+    scroll-behavior: smooth;
 }
 
 .cabecalho {
@@ -20,7 +22,8 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 24px;
-    background-color: #171818;
+    background-image: linear-gradient(to right, #0077B5,  #196d87);
+
 }
 
 header .top {
@@ -185,27 +188,40 @@ footer .content .link-boxes{
     flex-grow: 1;
 }
 
+/*Conteudo home*/
+
 .home{
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 350px;
-    background-color: #171818;
+    height: 650px;
+    background-color: #e8a93f;
 }
 
 .home-content{
     width: 50%;
 }
 
-
-.heading-primary {
+.heading-primary-name{
     font-size: max(16px, 2vw);
     text-transform: uppercase;
     letter-spacing: 3px;
     text-align: center; 
     color: #fff;
+}
+
+.heading-primary {
+    font-size: max(16px, 3vw);
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    text-align: center; 
+    color: #fff;
+}
+
+.heading-primary span{
+    color: #0077B5;
 }
 
 .text-primary {
@@ -228,15 +244,137 @@ footer .content .link-boxes{
     margin-left: 1%;
     border-radius: 3px;
     font-size: max(14px, 1vw);
-    background-color: #25B7D3;
+    background-color: #196d87;
     color: #ffffff;
     cursor: pointer;
+}
+.btn p{
+    font-size: 40px;
 }
 
 .btn:hover {
     background-color: #1aa7c4;
     transition: all .5s;
 }
+
+/*Conteudo about*/
+
+.about{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 650px;
+    background-color: #171818;
+}
+
+.about-content{
+    width: 50%;
+}
+
+
+.heading-about {
+    font-size: max(16px, 2vw);
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    text-align: center; 
+    color: #fff;
+}
+
+.heading-about span{
+    color: #196d87;
+}
+
+.text-about {
+    color: #fff;
+    font-size: max(16px, 1vw);
+    text-align: center;
+    width: 100%;
+    line-height: 1.6; 
+}
+
+.offer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 100px;
+}
+
+.offer-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    
+}
+
+.offer-img{
+    width: 50%;
+}
+
+/*Conteudo projects*/
+
+.projects{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 650px;
+    background-color: #e8a93f;
+}
+
+.projects-content{
+    width: 50%;
+}
+
+.projects-primary {
+    font-size: max(16px, 2vw);
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    text-align: center; 
+    color: #fff;
+}
+
+.text-projects {
+    color: #fff;
+    font-size: max(16px, 1vw);
+    text-align: center;
+    width: 100%;
+    line-height: 1.6; 
+}
+
+.projects-btn {
+    margin-top: 5rem;
+    text-align: center; 
+}
+
+.btn {
+    padding: 3px 3px;
+    width: 25%;
+    height: 60px;
+    margin-left: 1%;
+    border-radius: 3px;
+    font-size: max(14px, 1vw);
+    background-color: #196d87;
+    color: #ffffff;
+    cursor: pointer;
+}
+.btn p{
+    font-size: 40px;
+}
+
+.btn:hover {
+    background-color: #1aa7c4;
+    transition: all .5s;
+}
+
+
+
+
 
 .footerbox {
     display: flex;
@@ -248,28 +386,60 @@ footer .content .link-boxes{
     background-color: #171818;
 }
 
-.copy {
-    font-size: max(14px, 1vw);
-}
-
-.footer-menu {
-    display: flex;
-    gap: 32px;
-}
-
-.footerbox-menu-item {
+.footer .logo-details{
     color: #ffffff;
+    font-size: 30px;
+  }
+  .footer .media-icons{
+    display: flex;
+  }
+  .footer .media-icons a{
+    height: 40px;
+    width: 40px;
+    margin: 0 8px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    color: #ffffff;
+    font-size: 17px;
+    text-decoration: none;
+    transition: all 0.4s ease;
+  }
+
+.footer .media-icons a:nth-child(1){
+    background:  #34af23;
+}
+.footer .media-icons a:nth-child(1):hover{
+    color:  #34af23;
+    background: #ffffff;
+}
+.footer .media-icons a:nth-child(2){
+    background: #4267B2;
+}
+.footer .media-icons a:nth-child(2):hover{
+    color: #4267B2;
+    background: #ffffff;
+}
+
+.footer .media-icons a:nth-child(3){
+    background: #0077B5;
+}
+.footer .media-icons a:nth-child(3):hover{
+    color: #0077B5;
+    background: #ffffff;
+}
+
+.footer{
+    margin-top: 20px;
+
+}
+
+.copy, .footer-copy{
+    font-size: max(14px, 1vw);
     font-weight: 400;
     font-size: max(14px, 1vw);
-}
-
-.footerbox-menu-item:hover {
-    opacity: 1;
-    text-decoration: underline;
-}
-
-.hamburger-menu:focus~.cabecalho-menu {
-    display: flex;
+    margin-top: 20px;
+    color: #ffffff;
 }
 
 @media (max-width: 440px) {
