Update dos cards da sections portfólio

--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,37 @@ footer .content .link-boxes{
 
 
 
+.projects-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+    box-shadow: 7px 7px 13px 0px rgba(50, 50, 50, 0.22);
+    padding: 30px;
+    margin: 20px;
+    width: 400px;
+    transition: all 0.3s ease-out;
+  }
+  .card:hover {
+    transform: translateY(-5px);
+    cursor: pointer;
+  }
+   
+  .card p {
+    color: #000;
+    font-size: 16px;
+  }
+   
+  .image {
+    width: 100%;
+  }
+
 
 
 .footerbox {
