--- a/css/style.css
+++ b/css/style.css
@@ -384,9 +384,11 @@ footer .content .link-boxes{
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+    gap: 10px;
     border-radius: 5px;
     box-shadow: 7px 7px 13px 0px rgba(50, 50, 50, 0.22);
-    padding: 30px;
+    padding: 20px;
     margin: 20px;
     width: 400px;
     transition: all 0.3s ease-out;
