--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,7 @@ footer .content .link-boxes{
 .heading-skills {
     font-size: max(16px, 2vw);
     text-transform: uppercase;
-    letter-spacing: 3px;
+    letter-spacing: 20px;
     text-align: center; 
     color: #fff;
 }
@@ -284,11 +284,9 @@ footer .content .link-boxes{
 }
 
 .text-skills {
-    color: #fff;
+    color: #ffff;
     font-size: max(16px, 1vw);
     text-align: center;
-    width: 100%;
-    line-height: 1.6; 
 }
 
 .offer{
@@ -296,7 +294,7 @@ footer .content .link-boxes{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 0.8vw;
     margin-top: 100px;
 }
 
