--- a/css/style.css
+++ b/css/style.css
@@ -164,12 +164,6 @@ footer .content .link-boxes{
     text-decoration: underline;
 }
 
-.conteudo {
-    border-top: 0.4px solid #25b7d3;
-    min-height: 100vh;
-    flex-grow: 1;
-}
-
 /*Conteudo home*/
 
 .home{
@@ -251,7 +245,7 @@ footer .content .link-boxes{
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 650px;
+    height: 100vh;
     background-color: #171818;
 }
 
