--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,8 @@ footer .content .link-boxes{
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 700px;
+    height: 100%;
+    min-height: 700px;
     background-color: #e8a93f;
 }
 
@@ -220,7 +221,8 @@ footer .content .link-boxes{
 .btn {
     padding: 3px 3px;
     width: 25%;
-    height: 60px;
+    min-width: 50px;
+    max-height: 40px;
     margin-left: 1%;
     border-radius: 3px;
     font-size: max(14px, 1vw);
@@ -362,8 +364,8 @@ footer .content .link-boxes{
 
 .btn {
     padding: 3px 3px;
-    width: 200px;
-    height: 60px;
+    width: 15vw;
+    height: 7vh;
     border-radius: 3px;
     font-size: max(14px, 1vw);
     background-color: #196d87;
