--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,7 @@ footer .content .link-boxes{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     height: 100vh;
     background-color: #171818;
 
