--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ footer .content .link-boxes{
 }
 
 .heading-skills span{
-    color: #196d87;
+    color: #0077B5;
 }
 
 .text-skills {
@@ -319,7 +319,7 @@ footer .content .link-boxes{
 .cards-primary {
     font-size: max(16px, 3vw);
     text-align: center; 
-    color: #196d87;
+    color: #0077B5;
     margin-top: 7vh;
 }
 
