--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ footer .content .link-boxes{
     width: 10%;
     max-width: 700px;
     margin: 30px;
+    filter: invert(100%);
 }
 
 .hamburger-menu {
