--- a/css/style.css
+++ b/css/style.css
@@ -342,12 +342,13 @@ footer .content .link-boxes{
     align-items: center;
     text-align: center;
     gap: 10px;
-    border-radius: 5px;
+    border-radius: 3px;
     box-shadow: 7px 7px 13px 0px rgba(50, 50, 50, 0.22);
     padding: 10px;
     margin: 20px;
     transition: all 0.3s ease-out;
     border-top: 3px solid #1aa7c4;
+    background-color: #eeb451;
 
   }
   
