--- a/css/style.css
+++ b/css/style.css
@@ -361,8 +361,31 @@ footer .content .link-boxes{
     width: 100%;
   }
 
-  .cards-btn
-  .btn
+  .cards-btn {
+    margin-top: 5rem;
+    text-align: center; 
+}
+
+.btn {
+    padding: 3px 3px;
+    width: 25%;
+    min-width: 50px;
+    max-height: 40px;
+    margin-left: 1%;
+    border-radius: 3px;
+    font-size: max(14px, 1vw);
+    background-color: #196d87;
+    color: #ffffff;
+    cursor: pointer;
+}
+.btn p{
+    font-size: 40px;
+}
+
+.btn:hover {
+    background-color: #1aa7c4;
+    transition: all .5s;
+}
 
 /*footerbox*/
 
