--- a/css/style.css
+++ b/css/style.css
@@ -363,15 +363,14 @@ footer .content .link-boxes{
 
   .cards-btn {
     margin-top: 5rem;
-    text-align: center; 
+
 }
 
 .button-alt {
     padding: 3px 3px;
-    width: 8vw;
+    width: 10vw;
+    height: 5vh;
     min-width: 50px;
-    max-height: 40px;
-    margin-left: 1%;
     border-radius: 3px;
     font-size: max(14px, 1vw);
     background-color: #196d87;
