--- a/css/style.css
+++ b/css/style.css
@@ -168,13 +168,12 @@ footer .content .link-boxes{
 /*Conteudo home*/
 
 .home{
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 100%;
-    min-height: 900px;
+    height: 100vh;
     background-color: #e8a93f;
 }
 
