--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ footer .content .link-boxes{
     filter: invert(100%);
 }
 
-.cabecalho-img-responsive{
+.logo-responsive{
     display: none;
 
 }
@@ -457,7 +457,7 @@ footer .content .link-boxes{
         width: 40px;
         height: 30px;
         margin-left: 80vw;
-        
+
     }
 
     /*fullscren*/
