--- a/css/style.css
+++ b/css/style.css
@@ -168,14 +168,17 @@ footer .content .link-boxes{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     height: 100vh;
     background-color: #ffffff;
 }
 
 .home-content{
     width: 80vw;
-
+    display: flex;
+    flex-direction: column;
+    gap: 3vh;
+    
 }
 .home-info{
     width: 70vw;
