--- a/css/style.css
+++ b/css/style.css
@@ -210,8 +210,7 @@ footer .content .link-boxes{
     color: #000;
     font-size: max(18px, 1.5vw);
     text-align: center;
-    width: 100%;
-    line-height: 1.6; 
+    line-height: 5vh; 
 }
 
 .home-btn {
