--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ footer .content .link-boxes{
     min-width: 100px;
     border-radius: 3px;
     font-size: max(14px, 1vw);
-    background-color: #196d87;
+    background-color: #0077B5;
     color: #ffffff;
     cursor: pointer;
 }
@@ -347,7 +347,7 @@ footer .content .link-boxes{
     padding: 10px;
     margin: 20px;
     transition: all 0.3s ease-out;
-    border-bottom: 1px solid #1aa7c4;
+    border-bottom: 1px solid #0077B5;
     background-color: #fff;
   }
   
