--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ footer .content .link-boxes{
 }
 
 .button-53 {
-    background-color: #3DD1E7;
+    background-color: #0077B5;
     border: 0 solid #E5E7EB;
     box-sizing: border-box;
     color: #000000;
