--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ footer .content .link-boxes{
 }
 
 .home-btn {
-    margin-top: 5rem;
+    margin-top: 7vh;
     text-align: center;
 }
 
@@ -223,16 +223,12 @@ footer .content .link-boxes{
     border: 0 solid #E5E7EB;
     box-sizing: border-box;
     color: #000000;
-    font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     font-size: max(18px, 1.5vw);
-    font-weight: 400;
     justify-content: center;
     line-height: 1.75rem;
     padding: .75rem 1.65rem;
-    position: relative;
     text-align: center;
     text-decoration: none #000000 solid;
-    text-decoration-thickness: auto;
     width: 100%;
     max-width: 460px;
     position: relative;
@@ -491,6 +487,9 @@ footer .content .link-boxes{
     .btn{
         width: 80%;
     }
+    .home-btn {
+        margin-top: 2vh;
+    }
     
     .one,
     .two,
@@ -517,6 +516,7 @@ footer .content .link-boxes{
     .home.on{
         margin-top: 100vh;
     }
+
 
     .cabecalho.on{
         position: absolute;
