--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ footer .content .link-boxes{
     background-color: #0077B5;
     border: 0 solid #E5E7EB;
     box-sizing: border-box;
-    color: #000000;
+    color: #fff;
     font-size: max(18px, 1.5vw);
     justify-content: center;
     line-height: 1.75rem;
@@ -233,7 +233,6 @@ footer .content .link-boxes{
     max-width: 460px;
     position: relative;
     cursor: pointer;
-    transform: rotate(-2deg);
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
@@ -484,9 +483,6 @@ footer .content .link-boxes{
         filter: invert(100%);
     }
 
-    .btn{
-        width: 80%;
-    }
     .home-btn {
         margin-top: 2vh;
     }
