--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,7 @@ footer .content .link-boxes{
     box-sizing: border-box;
     color: #fff;
     font-size: max(18px, 1.5vw);
+    text-transform: uppercase;
     justify-content: center;
     line-height: 1.75rem;
     padding: .75rem 1.65rem;
