--- a/css/style.css
+++ b/css/style.css
@@ -213,12 +213,12 @@ footer .content .link-boxes{
     line-height: 5vh; 
 }
 
-.home-btn {
+.contacte-btn {
     margin-top: 7vh;
     text-align: center;
 }
 
-.button-53 {
+.button-contacte {
     background-color: #0077B5;
     border: 0 solid #E5E7EB;
     box-sizing: border-box;
@@ -239,11 +239,11 @@ footer .content .link-boxes{
     touch-action: manipulation;
   }
   
-  .button-53:focus {
+  .button-contacte:focus {
     outline: 0;
   }
   
-  .button-53:after {
+  .button-contacte:after {
     content: '';
     position: absolute;
     border: 1px solid #000000;
@@ -253,17 +253,11 @@ footer .content .link-boxes{
     height: calc(100% - 1px);
   }
   
-  .button-53:hover:after {
+  .button-contacte:hover:after {
     bottom: 2px;
     left: 2px;
   }
-  
-  @media (min-width: 768px) {
-    .button-53 {
-      padding: .75rem 3rem;
-      font-size: 1.25rem;
-    }
-  }
+
 
 /*Conteudo skills*/
 
