--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ footer .content .link-boxes{
     border: 0 solid #E5E7EB;
     box-sizing: border-box;
     color: #fff;
-    font-size: max(18px, 1.5vw);
+    font-size: max(12px, 1.5vw);
     text-transform: uppercase;
     justify-content: center;
     line-height: 1.75rem;
@@ -478,7 +478,7 @@ footer .content .link-boxes{
         filter: invert(100%);
     }
 
-    .home-btn {
+    .button-contacte {
         margin-top: 2vh;
     }
     
