--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ html{
     padding: 24px;
     background-image: linear-gradient(to top, #00c6fb, #00affe, #0097ff, #007bf9, #005bea);
     background-repeat: no-repeat;
+    border-top-left-radius:10px;
+    border-top-right-radius:10px;
+    border-bottom-left-radius: 50% 20%;
+    border-bottom-right-radius: 50% 20%;
 
 }
 
