--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,8 @@ html{
     background-image: linear-gradient(to top, #00c6fb, #00affe, #0097ff, #007bf9, #005bea);
     background-repeat: no-repeat;
     background-color: #fffafa;
-    border-bottom-left-radius: 50% 20%;
-    border-bottom-right-radius: 50% 20%;
+    border-bottom-left-radius: 2%;
+    border-bottom-right-radius: 2%;
 
 }
 
@@ -462,8 +462,8 @@ footer .content .link-boxes{
 @media (max-width: 630px) {
     
     .cabecalho {
-    border-bottom-left-radius: 25% 10%;
-    border-bottom-right-radius: 25% 10%;
+    border-bottom-left-radius: 1%;
+    border-bottom-right-radius: 1%;
     }
 
     .header-items{
