--- a/css/style.css
+++ b/css/style.css
@@ -25,98 +25,6 @@ html{
     background-color: #0077B5;
 }
 
-header .top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 10px;
-    gap: 30vw;
-
-  }
-
-  .logo-details{
-    display: flex;
-    flex-direction: row;
-  }
-
-  .logo-details h2{
-    font-size: max(8px, 0.6vw);
-  }
-
-  .logo-details h3{
-    margin-left: 20px;
-    font-size: max(10px, 1.5vw);
-  }
-
-  header .top .icon-phone {
-    width: 2.5vw;
-    height: 2.5vw;
-    margin: 0 8px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 2.5vw;
-    background: #ffffff;
-    color: #000;
-    font-size: 1.3vw;
-    text-decoration: none;
-    transition: all 0.4s ease;
-
-  }
-
-  .cabecalho .top .logo-details{
-    color: #ffffff;
-  }
-  .cabecalho .top .media-icons{
-    display: flex;
-  }
-  .cabecalho .top .media-icons a{
-
-    width: 2.5vw;
-    height: 2.5vw;
-    margin: 0 8px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 2.5vw;
-    color: #ffffff;
-    font-size: 17px;
-    text-decoration: none;
-    transition: all 0.4s ease;
-  }
-.top .media-icons a:nth-child(1){
-    background:  #34af23;
-}
-.top .media-icons a:nth-child(1):hover{
-    color:  #34af23;
-    background: #ffffff;
-}
-.top .media-icons a:nth-child(2){
-    background: #4267B2;
-}
-.top .media-icons a:nth-child(2):hover{
-    color: #4267B2;
-    background: #ffffff;
-}
-.top .media-icons a:nth-child(3){
-    background: #E1306C;
-}
-.top .media-icons a:nth-child(3):hover{
-    color: #E1306C;
-    background: #ffffff;
-}
-.top .media-icons a:nth-child(4){
-    background: #1DA1F2;
-}
-.top .media-icons a:nth-child(4):hover{
-    color: #1DA1F2;
-    background: #ffffff;
-}
-.top .media-icons a:nth-child(5){
-    background: #0077B5;
-}
-.top .media-icons a:nth-child(5):hover{
-    color: #0077B5;
-    background: #ffffff;
-}
 footer .content .link-boxes{
     width: 100%;
     display: flex;
@@ -385,6 +293,107 @@ footer .content .link-boxes{
   }
 
 /*footerbox*/
+
+footer .top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    gap: 30vw;
+
+  }
+
+  .logo-details{
+    display: flex;
+    flex-direction: row;
+  }
+
+  .logo-details h2{
+    font-size: max(8px, 0.6vw);
+  }
+
+  .logo-details h3{
+    margin-left: 20px;
+    font-size: max(10px, 1.5vw);
+  }
+
+  footer .top .icon-phone {
+    width: 2.5vw;
+    height: 2.5vw;
+    margin: 0 8px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 2.5vw;
+    background: #ffffff;
+    color: #000;
+    font-size: 1.3vw;
+    text-decoration: none;
+    transition: all 0.4s ease;
+
+  }
+
+  .footerbox .top .logo-details{
+    color: #ffffff;
+  }
+  .footerbox .top .media-icons{
+    display: flex;
+  }
+  .footerbox .top .media-icons a{
+
+    width: 2.5vw;
+    height: 2.5vw;
+    margin: 0 8px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 2.5vw;
+    color: #ffffff;
+    font-size: 17px;
+    text-decoration: none;
+    transition: all 0.4s ease;
+  }
+.top .media-icons a:nth-child(1){
+    background:  #34af23;
+}
+.top .media-icons a:nth-child(1):hover{
+    color:  #34af23;
+    background: #ffffff;
+}
+.top .media-icons a:nth-child(2){
+    background: #4267B2;
+}
+.top .media-icons a:nth-child(2):hover{
+    color: #4267B2;
+    background: #ffffff;
+}
+.top .media-icons a:nth-child(3){
+    background: #E1306C;
+}
+.top .media-icons a:nth-child(3):hover{
+    color: #E1306C;
+    background: #ffffff;
+}
+.top .media-icons a:nth-child(4){
+    background: #1DA1F2;
+}
+.top .media-icons a:nth-child(4):hover{
+    color: #1DA1F2;
+    background: #ffffff;
+}
+.top .media-icons a:nth-child(5){
+    background: #0077B5;
+}
+.top .media-icons a:nth-child(5):hover{
+    color: #0077B5;
+    background: #ffffff;
+}
+
+
+
+
+
+
+
+
 
 .footerbox {
     display: flex;
