--- a/css/style.css
+++ b/css/style.css
@@ -388,7 +388,7 @@ footer .top {
     align-items: center;
     justify-content: space-around;
     color: #ffffff;
-    padding: 10px;
+    padding: 5%;
     background-color: #171818;
     height: 12vh;
 }
