--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,82 @@ html{
     width: 100%;
   }
 
+/*Conteudo contact*/
+
+.contact{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #171818;
+}
+.heading-contact{
+    margin-bottom: 7vh;
+    font-size: max(20px, 2vw);
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    text-align: center; 
+    color: #fff;
+}
+.contact-row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10vw;
+    flex-wrap: wrap;
+    max-width: 1300px;
+    margin: 7vh 0 7vh 0;
+}
+
+.contact-row > div{
+    flex: 1 1 70px;
+  }
+
+
+
+.contact-icons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact-icons h2{
+    color: #fff;
+    font-size: max(16px, 1.2vw);
+}
+
+.contact-icons p{
+    color: #fff;
+    font-size: max(14px, 0.7vw);
+}
+
+
+
+
+.contact-icons a{
+
+    width: max(40px, 6vw);
+    height: max(40px, 6vw);
+    border-radius: 50%;
+    text-align: center;
+    color: #ffffff;
+    font-size: max(27px, 4vw);
+    text-decoration: none;
+    transition: all 0.4s ease;
+  }
+
+.contact-row .contact-icons a{
+    background: #1DA1F2;
+}
+.contact-row .contact-icons a:hover{
+    color: #1DA1F2;
+    background: #ffffff;
+}
+
+
+
 /*footerbox*/
 
 footer .top {
@@ -389,7 +465,7 @@ footer .top {
     justify-content: space-around;
     color: #ffffff;
     padding: 5%;
-    background-color: #171818;
+    background-color: #0077B5;
     height: 12vh;
 }
 
