--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ html{
     align-items: center;
     gap: 10vw;
     flex-wrap: wrap;
-    max-width: 1300px;
+    width: 65vw;
     margin: 7vh 0 7vh 0;
 }
 
@@ -318,6 +318,7 @@ html{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
 .contact-icons h2{
