--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ html{
 /*Conteudo home*/
 
 .home{
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
